use more library code instead of reinventing it